# omnyorder

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  restaraunt_ordering_prompt.py  vector_db.py
adk-agent/: pyproject.toml  requirements.txt
adk-agent/food-ordering-agent/: .env.example  agent.py
adk-agent/food-ordering-agent/subagents/: __init__.py
adk-agent/food-ordering-agent/subagents/api_executor/: __init__.py  agent.py  tools.py
adk-agent/food-ordering-agent/subagents/order_generator/: __init__.py  agent.py
adk-agent/food-ordering-agent/subagents/platform_selector/: __init__.py  agent.py
adk-agent/food-ordering-agent/subagents/preferences_analyzer/: __init__.py  agent.py
browseruse-mcp/: LOCAL_BROWSER_HTTP_SUMMARY.md  LOCAL_BROWSER_MCP_GUIDE.md  PROJECT_CLEANUP_SUMMARY.md  README.md  api_client_example.py  curl_examples.md  http_mcp_server.py  local_browser_mcp_server.py  local_mcp_config.json  main.py  mcp_config.json  pyproject.toml  remote_agent_client.py  requirements_http.txt  setup.sh  setup_key.sh  simple_api_server.py  start_local_browser.sh  test_local_browser_mcp.py
chroma-data/: chroma.sqlite3
chroma_db/: chroma.sqlite3
omni-order/: package-lock.json
omni-order-ui/: package-lock.json  package.json
omni-order-ui/app/: globals.css  layout.tsx
omni-order-ui/app/voice-agent/: page.tsx
omni-order-ui/components/map/: BackgroundMap.tsx  MapProvider.tsx
omni-order-ui/hooks/: useMapMarkers.ts
omni-order-ui/lib/: googleMapsLoader.ts
omni-order/app/voice-agent/: page.tsx
